@@ -1,25 +1,0 @@
-TARGET = main
-
-all: $(TARGET)
-
-libfA.so: fA.c
-	gcc -g -fPIC -DPIC fA.c -o libfA.so -shared
-
-libfB.so: fB.c
-	gcc -g -fPIC -DPIC fB.c -o libfB.so -shared
-
-main: main.c libfA.so libfB.so
-	gcc -g main.c -Wl,-rpath -Wl,../../../../src/tracer/.libs -Wl,-rpath -Wl,. -L ../../../../src/tracer/.libs -L . -lfA -lfB -lseqtrace -o main
-
-main_empty: main_empty.c
-	gcc -g main.c -Wl,-rpath -Wl,../../../../src/tracer/.libs -L../../../../src/tracer/.libs -o main
-
-run: main
-	EXTRAE_ON=1 ./main
-	../../../../src/merger/mpi2prv -f TRACE.mpits
-
-run-nomerge: main
-	EXTRAE_ON=1 ./main
-
-clean: 
-	rm -fr libfA.so libfB.so main set-0 TRACE.sym TRACE.mpits main.prv main.pcf main.row
