@@ -1,19 +1,0 @@
-TARGET = main
-
-all: $(TARGET)
-
-libfA.so: fA.c
-	gcc -fPIC -DPIC fA.c -o libfA.so -shared
-
-libfB.so: fB.c
-	gcc -fPIC -DPIC fB.c -o libfB.so -shared
-
-main: main.c libfA.so libfB.so
-	gcc -g main.c -Wl,-rpath -Wl,../../../../src/tracer/.libs -Wl,-rpath -Wl,. -L../../../../src/tracer/.libs -L. -lfA -lfB -lseqtrace -o main
-
-run: main
-	EXTRAE_ON=1 ./main
-	../../../../src/merger/mpi2prv -f TRACE.mpits -e main
-
-clean: 
-	rm -fr libfA.so libfB.so main TRACE.sym TRACE.mpits set-0 main.prv main.pcf main.row
