@@ -2,14 +2,15 @@
 
 source ../../helper_functions.bash
 
-TRACE=main
+TRACE=main_nodebug
 
-make -f Makefile.nodebug clean run
+EXTRAE_ON=1 ./main_nodebug
+../../../../src/merger/mpi2prv -f TRACE.mpits
 
 # Do actual checks
 CheckEntryInPCF ${TRACE}.pcf "0 (Unresolved)"
 CheckEntryInPCF ${TRACE}.pcf "0 (_NOT_Found)"
-CheckEntryInPCF ${TRACE}.pcf "main.c, main"
+CheckEntryInPCF ${TRACE}.pcf "main.c, main_nodebug"
 
 NumberEntriesInPRV ${TRACE}.prv 60000119 3
 if [[ "${?}" -ne 1 ]] ; then
@@ -26,5 +27,3 @@ if [[ "${?}" -ne 3 ]] ; then
 	echo "There must be only three entries to 60000119:0"
 	exit 1
 fi
-
-make -f Makefile.nodebug clean
